# alpaca_mcp_server

./: .claude.json  .env  .env.example  .gitignore  .mcp.json.example  .mcp.json.old  ARCHITECTURE.md  COMPREHENSIVE_TESTING_REPORT.md  DAY_TRADING_GUIDE.md  DAY_TRADING_STARTUP_CHECKLIST_FAST.md  FIX_SUMMARY.md  HYBRID_SYSTEM_REQUIREMENTS.md  HYBRID_SYSTEM_SESSION_LOG.md  HYBRID_SYSTEM_TODO.md  LOSS_PREVENTION_SYSTEM.md  MCP_TOOLS_REFERENCE.md  README.md  README_NEW_ARCHITECTURE.md  REFACTORING_COMPLETE_REPORT.md  REFACTORING_SUMMARY.md  SECURITY.md  TECHNICAL_TOOLS_REFERENCE.md  TOOLS_ACCESS_GUIDE.md  TOOL_INVENTORY_ANALYSIS.md  TRADING_LESSONS_LEARNED.md  alpaca_mcp_server.py  debug_alpaca_api.py  debug_data_access.py  debug_live_timestamps.py  debug_market_momentum.py  debug_mcp_env.py  debug_recent.py  debug_timestamps.py  debug_timezone.py  debug_working_tool.py  get_snapshot.py  latest.lis  momentum.lis  monitor_cero_trading.sh  order_tools.py  (+38 more)
alpaca_mcp_server/: __init__.py  __main__.py  claude_code_tool_fix.py  compatibility.py  server.py
alpaca_mcp_server/config/: __init__.py  global_config.py  settings.py
alpaca_mcp_server/models/: __init__.py  schemas.py
alpaca_mcp_server/monitoring/: __init__.py  alert_system.py  desktop_notifications.py  fastapi_service.py  fastapi_service_original.py  hybrid_service.py  position_tracker.py  signal_detector.py  streaming_integration.py  trade_confirmation.py
alpaca_mcp_server/prompts/: __init__.py  account_analysis_prompt.py  day_trading_workflow.py  list_trading_capabilities.py  market_analysis_prompt.py  market_session_workflow.py  master_scanning_workflow.py  position_management_prompt.py  pro_technical_workflow.py  scan_prompt.py  startup_prompt.py  stream_centric_trading_prompt.py  tools_reference_prompt.py
alpaca_mcp_server/resources/: __init__.py  account_resources.py  api_monitor.py  data_quality.py  help_system.py  intraday_pnl.py  market_momentum.py  market_resources.py  portfolio_resources.py  position_resources.py  server_health.py  session_status.py  streaming_resources.py
alpaca_mcp_server/server_components/: tool_registrations.py
alpaca_mcp_server/tests/: __init__.py  conftest.py  run_focused_tests.py  run_plotting_tests.py  run_tests.py
alpaca_mcp_server/tools/: __init__.py  account_tools.py  advanced_plotting_tool.py  asset_tools.py  (+22 more)
config/: __init__.py  settings.py
docs/: CLAUDE.md  CONSOLIDATED_Architecture_and_Development.md  CONSOLIDATED_Core_Principles_and_Best_Practices.md  CONSOLIDATED_Data_Analytics_Framework.md  CONSOLIDATED_Implementation_Templates.md  CONSOLIDATED_Integration_and_Operations.md  CONSOLIDATED_Trading_Operations.md  MCP-Server-Primary-Purpose.md  Overview.md  PLOTTING_INTEGRATION_SUMMARY.md  TEST_SUMMARY.md  alpaca_stream.md  design-philosophy.md  fucked_up.md  geniune-automated-monitoring.md  infinite-agentic-trading.md  quick-design-philosophy.md  stock-trading-learnings.md  transcript_mKEq_YaJjPI.txt
docs_old/: DEVELOPER_GUIDE.md  MCP_TOOLS_REFERENCE.md  PEAK_TROUGH_ANALYSIS_TOOL.md  PLOTTING_TEST_SUMMARY.md  PLOT_DISPLAY_SUMMARY.md  SETUP_AND_ARCHITECTURE.md  claude_opus_mcp_breakdown.md  new_lesson.md
models/: __init__.py  schemas.py
monitoring_data/: fastapi_service_state.json  hybrid_service_state.json
scripts/: combined.lis  start_monitoring_service.sh  status_monitoring_service.sh  stop_monitoring_service.sh
(+20 files in other folders)
