[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@yourdomain.com"}]
requires-python = ">=3.12"
dependencies = [
    "agents>=1.4.0",
    "openai-agents>=0.0.11",
    "alpaca-py",
    "mcp",
    "python-dotenv"
]

[project.scripts]
your-cli-command = "alpaca_mcp_server:main"
